@@ -24,20 +24,24 @@
  */
 package jdk.internal.foreign.abi.fallback;
 
-import jdk.internal.foreign.Scoped;
+import jdk.internal.foreign.AbstractMemorySegmentImpl;
+import jdk.internal.foreign.MemorySessionImpl;
 import jdk.internal.foreign.abi.AbstractLinker;
+import jdk.internal.foreign.abi.CapturableState;
+import jdk.internal.foreign.abi.LinkerOptions;
 import jdk.internal.foreign.abi.SharedUtils;
-import jdk.internal.foreign.abi.aarch64.TypeClass;
 
-import java.lang.foreign.Addressable;
+import java.lang.foreign.Arena;
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.GroupLayout;
-import java.lang.foreign.MemoryAddress;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.PaddingLayout;
 import java.lang.foreign.SegmentAllocator;
+import java.lang.foreign.SegmentScope;
 import java.lang.foreign.SequenceLayout;
+import java.lang.foreign.StructLayout;
+import java.lang.foreign.UnionLayout;
 import java.lang.foreign.ValueLayout;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
@@ -83,20 +87,19 @@ public final class FallbackLinker extends AbstractLinker {
         return INSTANCE;
     }
 
-    private static final Map<Class<?>, MemoryAddress> CARRIER_TO_TYPE = Map.of(
-        boolean.class, MemoryAddress.ofLong(ffi_type_uint8()),
-        byte.class, MemoryAddress.ofLong(ffi_type_sint8()),
-        short.class, MemoryAddress.ofLong(ffi_type_sint16()),
-        char.class, MemoryAddress.ofLong(ffi_type_uint16()),
-        int.class, MemoryAddress.ofLong(ffi_type_sint32()),
-        long.class, MemoryAddress.ofLong(ffi_type_sint64()),
-        float.class, MemoryAddress.ofLong(ffi_type_float()),
-        double.class, MemoryAddress.ofLong(ffi_type_double()),
-        MemoryAddress.class, MemoryAddress.ofLong(ffi_type_pointer()),
-        Addressable.class, MemoryAddress.ofLong(ffi_type_pointer())
+    private static final Map<Class<?>, MemorySegment> CARRIER_TO_TYPE = Map.of(
+        boolean.class, MemorySegment.ofAddress(ffi_type_uint8()),
+        byte.class, MemorySegment.ofAddress(ffi_type_sint8()),
+        short.class, MemorySegment.ofAddress(ffi_type_sint16()),
+        char.class, MemorySegment.ofAddress(ffi_type_uint16()),
+        int.class, MemorySegment.ofAddress(ffi_type_sint32()),
+        long.class, MemorySegment.ofAddress(ffi_type_sint64()),
+        float.class, MemorySegment.ofAddress(ffi_type_float()),
+        double.class, MemorySegment.ofAddress(ffi_type_double()),
+        MemorySegment.class, MemorySegment.ofAddress(ffi_type_pointer())
     );
 
-    private static final MemoryAddress VOID_TYPE = MemoryAddress.ofLong(ffi_type_void());
+    private static final MemorySegment VOID_TYPE = MemorySegment.ofAddress(ffi_type_void());
     private static final short STRUCT_TYPE = ffi_type_struct();
 
     private static final int DEFAULT_ABI = ffi_default_abi();
@@ -127,12 +130,12 @@ public final class FallbackLinker extends AbstractLinker {
     }
 
     @Override
-    protected MethodHandle arrangeDowncall(MethodType inferredMethodType, FunctionDescriptor function) {
-        MemorySession cifSession = MemorySession.openImplicit();
-        MemorySegment cif = MemorySegment.allocateNative(sizeofCif(), cifSession);
+    protected MethodHandle arrangeDowncall(MethodType inferredMethodType, FunctionDescriptor function, LinkerOptions options) {
+        SegmentScope cifScope = SegmentScope.auto();
+        MemorySegment cif = MemorySegment.allocateNative(sizeofCif(), cifScope);
         long allocatorSize = function.argumentLayouts().size() * ADDRESS.byteSize();
         List<MemoryLayout> argLayouts = function.argumentLayouts();
-        MemorySegment argPtrs = cifSession.allocate(function.argumentLayouts().size() * ADDRESS.byteSize());
+        MemorySegment argPtrs = MemorySegment.allocateNative(function.argumentLayouts().size() * ADDRESS.byteSize(), cifScope);
         List<TypeClass> aTypes = new ArrayList<>();
         int numScopedArgs = 0;
         for (int i = 0; i < argLayouts.size(); i++) {
@@ -140,33 +143,43 @@ public final class FallbackLinker extends AbstractLinker {
             MemoryLayout layout = argLayouts.get(i);
             allocatorSize = SharedUtils.alignUp(allocatorSize, layout.byteAlignment());
             allocatorSize += layout.byteSize();
-            setAddress(argPtrs, i, toFFIType(cifSession, pType, layout));
-            TypeClass aType = TypeClass.forCarrier(pType);
+            setAddress(argPtrs, i, toFFIType(cifScope, pType, layout));
+            TypeClass aType = TypeClass.classify(layout);
             if (aType == TypeClass.ADDRESS) {
                 numScopedArgs++;
             }
             aTypes.add(aType);
         }
 
-        Addressable ffiRType = inferredMethodType.returnType() != void.class
-                ? toFFIType(cifSession, inferredMethodType.returnType(), function.returnLayout().orElseThrow())
+        MemorySegment ffiRType = inferredMethodType.returnType() != void.class
+                ? toFFIType(cifScope, inferredMethodType.returnType(), function.returnLayout().orElseThrow())
                 : VOID_TYPE;
-        TypeClass rType = TypeClass.forCarrier(inferredMethodType.returnType());
+        TypeClass rType = function.returnLayout().map(TypeClass::classify).orElse(TypeClass.VOID);
         if (function.returnLayout().isPresent() && rType != TypeClass.SEGMENT) {
             MemoryLayout retLayout = function.returnLayout().get();
             allocatorSize = SharedUtils.alignUp(allocatorSize, retLayout.byteAlignment());
             allocatorSize += retLayout.byteSize();
         }
 
-        checkStatus(ffi_prep_cif(cif.address().toRawLongValue(), DEFAULT_ABI, argLayouts.size(),
-                ffiRType.address().toRawLongValue(), argPtrs.address().toRawLongValue()));
+        checkStatus(ffi_prep_cif(cif.address(), DEFAULT_ABI, argLayouts.size(),
+                ffiRType.address(), argPtrs.address()));
 
+        int capturedStateMask = options.capturedCallState()
+                .mapToInt(CapturableState::mask)
+                .reduce(0, (a, b) -> a | b);
         InvocationData invData = new InvocationData(cif, function.returnLayout().orElse(null),
-                rType, function.argumentLayouts(), List.copyOf(aTypes), allocatorSize, numScopedArgs);
+                rType, function.argumentLayouts(), List.copyOf(aTypes), allocatorSize, numScopedArgs, capturedStateMask);
 
         MethodHandle target = MethodHandles.insertArguments(MH_DO_DOWNCALL, 2, invData);
-        target = target.asCollector(1, Object[].class, inferredMethodType.parameterCount() + 1); // +1 for address
-        target = target.asType(inferredMethodType.insertParameterTypes(0, SegmentAllocator.class, Addressable.class));
+
+        int leadingArguments = 1; // address
+        MethodType type = inferredMethodType.insertParameterTypes(0, SegmentAllocator.class, MemorySegment.class);
+        if (capturedStateMask != 0) {
+            leadingArguments++;
+            type = type.insertParameterTypes(2, MemorySegment.class);
+        }
+        target = target.asCollector(1, Object[].class, inferredMethodType.parameterCount() + leadingArguments);
+        target = target.asType(type);
         target = foldArguments(target, 1, SharedUtils.MH_CHECK_SYMBOL);
         target = SharedUtils.swapArguments(target, 0, 1); // normalize parameter order
 
@@ -174,9 +187,9 @@ public final class FallbackLinker extends AbstractLinker {
     }
 
     @Override
-    protected MemorySegment arrangeUpcall(MethodHandle target, MethodType targetType, FunctionDescriptor function, MemorySession session) {
+    protected MemorySegment arrangeUpcall(MethodHandle target, MethodType targetType, FunctionDescriptor function, SegmentScope scope) {
         // FIXME cheating
-        return jdk.internal.foreign.abi.x64.sysv.CallArranger.arrangeUpcall(target, targetType, function, session);
+        return jdk.internal.foreign.abi.x64.sysv.CallArranger.arrangeUpcall(target, targetType, function, scope);
     }
 
     private static final class ffi_type {
@@ -185,52 +198,52 @@ public final class FallbackLinker extends AbstractLinker {
         private static native void setType(long ptr, short type);
         private static native void setElements(long ptr, long elements);
 
-        static MemorySegment make(List<MemoryLayout> elements, MemorySession session) {
-            MemorySegment elementsSeg = session.allocate((elements.size() + 1) * ADDRESS.byteSize());
+        static MemorySegment make(List<MemoryLayout> elements, SegmentScope scope) {
+            MemorySegment elementsSeg = MemorySegment.allocateNative((elements.size() + 1) * ADDRESS.byteSize(), scope);
             int i = 0;
             for (; i < elements.size(); i++) {
                 MemoryLayout elementLayout = elements.get(i);
-                Addressable elementType = toFFIType(session, inferCarrier(elementLayout), elementLayout);
+                MemorySegment elementType = toFFIType(scope, inferCarrier(elementLayout), elementLayout);
                 setAddress(elementsSeg, i, elementType);
             }
             // elements array is null-terminated
-            setAddress(elementsSeg, i, MemoryAddress.NULL);
+            setAddress(elementsSeg, i, MemorySegment.NULL);
 
-            MemorySegment ffiType = session.allocate(SIZE_BYTES);
-            setType(ffiType.address().toRawLongValue(), STRUCT_TYPE);
-            setElements(ffiType.address().toRawLongValue(), elementsSeg.address().toRawLongValue());
+            MemorySegment ffiType = MemorySegment.allocateNative(SIZE_BYTES, scope);
+            setType(ffiType.address(), STRUCT_TYPE);
+            setElements(ffiType.address(), elementsSeg.address());
 
             return ffiType;
         }
     }
 
-    private static Addressable toFFIType(MemorySession cifSession, Class<?> type, MemoryLayout layout) {
+    private static MemorySegment toFFIType(SegmentScope cifScope, Class<?> type, MemoryLayout layout) {
         if (layout instanceof GroupLayout grpl) {
             assert type == MemorySegment.class;
-            if (grpl.isStruct()) {
+            if (grpl instanceof StructLayout) {
                 // libffi doesn't want our padding
                 List<MemoryLayout> filteredLayouts = grpl.memberLayouts().stream()
-                        .filter(Predicate.not(MemoryLayout::isPadding))
+                        .filter(Predicate.not(PaddingLayout.class::isInstance))
                         .toList();
-                Addressable structType = ffi_type.make(filteredLayouts, cifSession);
+                MemorySegment structType = ffi_type.make(filteredLayouts, cifScope);
                 verifyStructType(grpl, filteredLayouts, structType);
                 return structType;
             }
-            assert grpl.isUnion();
+            assert grpl instanceof UnionLayout;
             throw new UnsupportedOperationException("No unions (TODO)");
         } else if (layout instanceof SequenceLayout sl) {
             List<MemoryLayout> elements = Collections.nCopies(Math.toIntExact(sl.elementCount()), sl.elementLayout());
-            return ffi_type.make(elements, cifSession);
+            return ffi_type.make(elements, cifScope);
         }
         return Objects.requireNonNull(CARRIER_TO_TYPE.get(type));
     }
 
     // verify layout against what libffi set
-    private static void verifyStructType(GroupLayout grpl, List<MemoryLayout> filteredLayouts, Addressable structType) {
-        try (MemorySession verifySession = MemorySession.openConfined()) {
-            MemorySegment offsetsOut = MemorySegment.allocateNative(ADDRESS.byteSize() * filteredLayouts.size(), verifySession);
+    private static void verifyStructType(GroupLayout grpl, List<MemoryLayout> filteredLayouts, MemorySegment structType) {
+        try (Arena verifyArena = Arena.openConfined()) {
+            MemorySegment offsetsOut = verifyArena.allocate(ADDRESS.byteSize() * filteredLayouts.size());
             checkStatus(ffi_get_struct_offsets(DEFAULT_ABI,
-                    structType.address().toRawLongValue(), offsetsOut.address().toRawLongValue()));
+                    structType.address(), offsetsOut.address()));
             for (int i = 0; i < filteredLayouts.size(); i++) {
                 MemoryLayout element = filteredLayouts.get(i);
                 final int finalI = i;
@@ -281,52 +294,60 @@ public final class FallbackLinker extends AbstractLinker {
         SEGMENT,
         VOID;
 
-        public static TypeClass forCarrier(Class<?> carrier) {
-            if (carrier == boolean.class) {
+        public static TypeClass classify(MemoryLayout layout) {
+            if (layout instanceof ValueLayout.OfBoolean) {
                 return BOOLEAN;
-            } else if (carrier == byte.class) {
+            } else if (layout instanceof ValueLayout.OfByte) {
                 return BYTE;
-            } else if (carrier == short.class) {
+            } else if (layout instanceof ValueLayout.OfShort) {
                 return SHORT;
-            } else if (carrier == char.class) {
+            } else if (layout instanceof ValueLayout.OfChar) {
                 return CHAR;
-            } else if (carrier == int.class) {
+            } else if (layout instanceof ValueLayout.OfInt) {
                 return INT;
-            } else if (carrier == long.class) {
+            } else if (layout instanceof ValueLayout.OfLong) {
                 return LONG;
-            } else if (carrier == float.class) {
+            } else if (layout instanceof ValueLayout.OfFloat) {
                 return FLOAT;
-            } else if (carrier == double.class) {
+            } else if (layout instanceof ValueLayout.OfDouble) {
                 return DOUBLE;
-            } else if (carrier == MemoryAddress.class || carrier == Addressable.class) {
+            } else if (layout instanceof ValueLayout.OfAddress) {
                 return ADDRESS;
-            } else if (carrier == MemorySegment.class) {
+            } else if (layout instanceof GroupLayout) {
                 return SEGMENT;
-            } else if (carrier == void.class) {
-                return VOID;
             }
-            throw new IllegalArgumentException("Unsupported carrier: " + carrier);
+            throw new IllegalArgumentException("Can not classify layout: " + layout);
         }
     }
 
-    private record InvocationData(MemorySegment cif, MemoryLayout returnLayout, TypeClass rType,
-                                  List<MemoryLayout> argLayouts, List<TypeClass> aTypes,
-                                  long allocatorSize, int numScopedArgs) {}
+    private record InvocationData(MemorySegment cif, MemoryLayout returnLayout, FallbackLinker.TypeClass rType,
+                                  List<MemoryLayout> argLayouts, List<FallbackLinker.TypeClass> aTypes,
+                                  long allocatorSize, int numScopedArgs, int capturedStateMask) {}
 
     private static Object doDowncall(SegmentAllocator returnAllocator, Object[] args, InvocationData invData) {
-        try (MemorySession session = MemorySession.openConfined()) {
-            SegmentAllocator allocator = invData.allocatorSize() != 0
-                ? SegmentAllocator.newNativeArena(invData.allocatorSize(), session)
-                : SharedUtils.THROWING_ALLOCATOR;
+        List<MemorySessionImpl> acquiredSessions = new ArrayList<>(invData.numScopedArgs());
+        try (Arena arena = Arena.openConfined()) {
+            int argStart = 0;
 
-            Addressable target = (Addressable) args[0];
+            MemorySegment target = (MemorySegment) args[argStart++];
+            MemorySessionImpl targetImpl = ((AbstractMemorySegmentImpl) target).sessionImpl();
+            targetImpl.acquire0();
+            acquiredSessions.add(targetImpl);
+
+            MemorySegment capturedState = null;
+            if (invData.capturedStateMask() != 0) {
+                capturedState = (MemorySegment) args[argStart++];
+                MemorySessionImpl capturedStateImpl = ((AbstractMemorySegmentImpl) capturedState).sessionImpl();
+                capturedStateImpl.acquire0();
+                acquiredSessions.add(capturedStateImpl);
+            }
+
             List<MemoryLayout> argLayouts = invData.argLayouts();
-            MemorySegment argPtrs = allocator.allocate(argLayouts.size() * ADDRESS.byteSize());
-            ArrayList<Scoped> scoped = new ArrayList<>(invData.numScopedArgs());
+            MemorySegment argPtrs = arena.allocate(argLayouts.size() * ADDRESS.byteSize());
             for (int i = 0; i < argLayouts.size(); i++) {
-                Object arg = args[i + 1]; // skip address
+                Object arg = args[argStart + i];
                 MemoryLayout layout = argLayouts.get(i);
-                MemorySegment argSeg = allocator.allocate(layout);
+                MemorySegment argSeg = arena.allocate(layout);
                 switch (invData.aTypes().get(i)) {
                     case BOOLEAN -> argSeg.set((ValueLayout.OfBoolean) layout, 0, (Boolean) arg);
                     case BYTE -> argSeg.set((ValueLayout.OfByte) layout, 0, (Byte) arg);
@@ -337,10 +358,10 @@ public final class FallbackLinker extends AbstractLinker {
                     case FLOAT -> argSeg.set((ValueLayout.OfFloat) layout, 0, (Float) arg);
                     case DOUBLE -> argSeg.set((ValueLayout.OfDouble) layout, 0, (Double) arg);
                     case ADDRESS -> {
-                        Addressable addrArg = (Addressable) arg;
-                        Scoped scopedArg = (Scoped) addrArg;
-                        scoped.add(scopedArg);
-                        scopedArg.sessionImpl().acquire0();
+                        MemorySegment addrArg = (MemorySegment) arg;
+                        MemorySessionImpl sessionImpl = ((AbstractMemorySegmentImpl) addrArg).sessionImpl();
+                        sessionImpl.acquire0();
+                        acquiredSessions.add(sessionImpl);
                         argSeg.set((ValueLayout.OfAddress) layout, 0, addrArg);
                     }
                     case SEGMENT -> argSeg.copyFrom((MemorySegment) arg); // by-value struct
@@ -349,20 +370,17 @@ public final class FallbackLinker extends AbstractLinker {
             }
 
             MemorySegment retSeg = null;
-            MemoryAddress retPtr = MemoryAddress.NULL;
+            long retPtr = 0;
             if (invData.rType != TypeClass.VOID) {
-                retSeg = (invData.rType() == TypeClass.SEGMENT ? returnAllocator : allocator).allocate(invData.returnLayout);
+                retSeg = (invData.rType() == TypeClass.SEGMENT ? returnAllocator : arena).allocate(invData.returnLayout);
                 retPtr = retSeg.address();
             }
 
-            ffi_call(invData.cif().address().toRawLongValue(), target.address().toRawLongValue(),
-                    retPtr.toRawLongValue(), argPtrs.address().toRawLongValue());
+            long capturedStateAddr = capturedState == null ? 0 : capturedState.address();
+            ffi_call(invData.cif().address(), target.address(),
+                    retPtr, argPtrs.address(), capturedStateAddr, invData.capturedStateMask());
 
             Reference.reachabilityFence(invData.cif());
-
-            for (Scoped scopedArg : scoped) {
-                scopedArg.sessionImpl().release0();
-            }
 
             return switch (invData.rType()) {
                 case BOOLEAN -> retSeg.get((ValueLayout.OfBoolean) invData.returnLayout(), 0);
@@ -377,11 +395,15 @@ public final class FallbackLinker extends AbstractLinker {
                 case SEGMENT -> retSeg;
                 case VOID -> null;
             };
+        } finally {
+            for (MemorySessionImpl session : acquiredSessions) {
+                session.release0();
+            }
         }
     }
 
-    private static void setAddress(MemorySegment segment, long index, Addressable addr) {
-        PTR_ARRAY.set(segment, index, addr.address());
+    private static void setAddress(MemorySegment segment, long index, MemorySegment addr) {
+        PTR_ARRAY.set(segment, index, addr);
     }
 
     private static long getLong(MemorySegment segment, long index) {
@@ -395,7 +417,7 @@ public final class FallbackLinker extends AbstractLinker {
     private static native long sizeofCif();
 
     private static native int ffi_prep_cif(long cif, int abi, int nargs, long rtype, long atypes);
-    private static native void ffi_call(long cif, long fn, long rvalue, long avalues);
+    private static native void ffi_call(long cif, long fn, long rvalue, long avalues, long capturedState, int capturedStateMask);
     private static native short ffi_type_struct();
     private static native int ffi_get_struct_offsets(int abi, long type, long offsets);
 
